# attention

./: README.md  pyproject.toml
checkpoints/: run_2_vit_model.pth  run_3_vit_model.pth
docs/: experiments.md
notebooks/: visualize_attention.ipynb
scripts/: train.py
src/attention/: __init__.py  attention.py  vision_transformer.py
